# Foldy

./: .gitmodules  Foldy.doap  NEWS  README.md  foldy.spec  meson.build
.forgejo/workflows/: main.yml
.gear/: foldy.spec  rules
.gear/tags/: list
.gear/upstream/: remotes
app/: add-apps-dialog.vala  add-apps-page.vala  app-info-dialog.vala  app-row-add.vala  app-row-remove.vala  app-row.vala  application.vala  apps-model.vala  base-page.vala  base-row.vala  categories-list.vala  categories-model.vala  category-row.vala  config.vapi  folder-dialog.vala  folder-menu-row.vala  folder-page.vala  folder-pages.vala  folder-rename-dialog.vala  folders-list-page.vala  main.vala  meson.build  model-manager.vala  search-row.vala  start-page.vala  utils.vala  window.vala
app/data/: meson.build  org.altlinux.Foldy.Devel.desktop.in  org.altlinux.Foldy.Devel.metainfo.xml.in  org.altlinux.Foldy.desktop.in  org.altlinux.Foldy.gresource.xml  org.altlinux.Foldy.gschema.xml  org.altlinux.Foldy.metainfo.xml.in  style.css
app/data/icons/: meson.build
app/data/ui/: add-apps-page.blp  app-info-dialog.blp  app-row.blp  base-page.blp  base-row.blp  categories-list.blp  category-row.blp  folder-dialog.blp  folder-page.blp  folder-pages.blp  folder-rename-dialog.blp  folders-list-page.blp  start-page.blp  window.blp
app/po/: POTFILES.in  foldy.pot  ru.po  uk.po
build-aux/altlinux/: foldy.spec
build-aux/flatpak/: org.altlinux.Foldy.Devel.json  org.altlinux.Foldy.Devel.yml
build-aux/sisyphus/: foldy.spec
lib/: folder.vala  folders.vala  meson.build  utils.vala
service/: config.vapi  folder-data.vala  folders-watcher.vala  main.vala  meson.build  utils.vala
service/data/: meson.build  org.altlinux.FoldyService.desktop.in.in  org.altlinux.FoldyService.metainfo.xml.in
service/data/icons/: meson.build
service/po/: POTFILES.in  org.altlinux.FoldyService.pot  ru.po  uk.po  update_potfiles.sh
